--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: blitz2017-177306
+application: student-149306
 version: 1
 runtime: python27
 api_version: 1
@@ -11,6 +11,10 @@ handlers:
   static_dir: css
 - url: /js
   static_dir: js
+- url: /Query
+  script: starting.app
+- url: /ViewEvents
+  script: starting.app
 - url: /.*
   script: starting.app
   login: required
